# rcj2025_ros2

./: .gitmodules  README.md
.github/workflows/: ci.yaml
rcj2025_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rcj2025_bringup/launch/: real.launch.py  sim.launch.py
rcj2025_camera/: package.xml  setup.cfg  setup.py
rcj2025_camera/rcj2025_camera/: img_detector.py
rcj2025_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rcj2025_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
rcj2025_description/meshes/: wheel_left_backward_link_1.stl  wheel_left_forward_link_1.stl  wheel_right_backward_link_1.stl  wheel_right_forward_link_1.stl
rcj2025_description/urdf/: materials.xacro  rcj2025.gazebo  rcj2025.trans  rcj2025.xacro
rcj2025_interface/: CMakeLists.txt  package.xml
rcj2025_interface/include/rcj2025_interface/: manual_controller.hpp
rcj2025_interface/launch/: manual.launch.py
rcj2025_interface/src/: manual_controller.cpp
rcj2025_maze_solver/: CMakeLists.txt  package.xml
rcj2025_maze_solver/include/: frontier_explorer.hpp
rcj2025_maze_solver/src/: frontier_explorer.cpp
rcj2025_msgs/: CMakeLists.txt  package.xml
rcj2025_msgs/srv/: GoalPoints.srv
rcj2025_sim/: package.xml  setup.cfg  setup.py
rcj2025_sim/config/: ros_gz_bridge.yaml
rcj2025_sim/launch/: simulation.launch.py  spawn.launch.py
rcj2025_state_manager/: CMakeLists.txt  package.xml
rcj2025_state_manager/src/: state_manager.cpp
